<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myPrefs">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_prefAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:gravity="center|center_horizontal"
            android:text="@string/tvAddress"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/my_prefLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/place_autocomplete_progress_horizontal_margin"
            android:gravity="center|center_horizontal"
            android:paddingHorizontal="@dimen/place_autocomplete_button_padding"
            android:text="@string/location"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:foregroundGravity="center_vertical"
            android:gravity="center"
            android:text="@string/save_station" />


    </LinearLayout>
</ScrollView>